exports[`test No options - spec 1`] = `
<div
  className="pe-notification pe-dark-tone   pe-notification--horizontal   "
  onClick={[Function]}>
  <div
    className="pe-notification__content" />
</div>
`;

exports[`test Option: class - spec 1`] = `
<div
  className="pe-notification pe-dark-tone   pe-notification--horizontal   class-x"
  onClick={[Function]}>
  <div
    className="pe-notification__content" />
</div>
`;

exports[`test Option: className - spec 1`] = `
<div
  className="pe-notification pe-dark-tone   pe-notification--horizontal   className-x"
  onClick={[Function]}>
  <div
    className="pe-notification__content" />
</div>
`;

exports[`test Option: element - spec 1`] = `
<a
  className="pe-notification pe-dark-tone   pe-notification--horizontal   "
  onClick={[Function]}>
  <div
    className="pe-notification__content" />
</a>
`;

exports[`test Option: id - spec 1`] = `
<div
  className="pe-notification pe-dark-tone   pe-notification--horizontal   "
  id="id-x"
  onClick={[Function]}>
  <div
    className="pe-notification__content" />
</div>
`;
